<resources>
    <string name="app_name">College Central</string>
    <string name="LOGIN_PAGE">Login Page</string>
    <string name="MY_PROFILE">My Profile</string>
    <string name="NEW_ACCOUNT">New Account</string>
    <string name="MY_ADS">My Ads</string>
    <string name="NEW_AD">New Ad</string>

    <string name="btn_search">Search</string>

    <string name="navDrawer_open">Open drawer</string>
    <string name="navDrawer_close">Close drawer</string>

    <string name="sample_ID">Not Logged In</string>
    <string name="sample_email">loginFirst@iiti.ac.in</string>
    <string name="loremIpsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </string>

    <string name="free">Free</string>
    <string name="currency">₹ %1$d</string>
    <string name="sampleTitle">Title</string>

    <string name="labelDescription">Description:</string>

    <!-- Navigation Drawer -->
    <string name="new_account">New Account</string>
    <string name="settings">Settings</string>
    <string name="my_ads">My Ads</string>
    <string name="my_profile">My Profile</string>
    <string name="main_screen">Main Page</string>

    <!-- Login Page -->
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>

    <!-- Ad -->
    <string name="setTitle">Set Title</string>
    <string name="setPrice">Price:</string>
    <string name="hintDescriptionAd">Describe in max 2000 characters.</string>
    <string name="create_ad">Create Ad</string>
    <string name="Profile_image">Profile Image</string>
    <string name="change">Change</string>
    <string name="Sample_Name">Set Name</string>
    <string name="roomNumber">Room</string>
    <string name="phone">Phone</string>
    <string name="label_update_changes">Update Changes</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_new_account">Create New Account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="search">Search…</string>
    <string name="go">GO</string>


    <string name="pass_dont_match">Passwords don\'t match.</string>
    <string name="pass_illegal_char">Password can\'t contain \" or \'</string>
    <string name="pass_min_size">Minimum %1$d characters required.</string>
    <string name="add_photo">Add Photo</string>
    <string name="save_cred">Keep me logged in</string>
    <string name="logout">Logout</string>
    <string name="refresh">Refresh</string>
    <string name="delete">Delete</string>
    <string name="posted_by">Posted by:</string>
    <string name="phone_number">Phone Number</string>
    <string name="title_activity_onboarding">OnboardingActivity</string>

    <string name="lbl_subtitle">Subtitle</string>
    <string name="title">Title</string>


    <string name="page0o">Want to get rid of the crap in your room and help others?</string>
    <string name="page1o">Or spread your skills and meet your juniors?</string>
    <string name="page2o">Your ad will we visible to students just from your college.</string>
    <string name="page3o">Contact the person using the phone number and meet up!</string>

    <string name="name">Name</string>
    <string name="add_image_hint">Add pictures to make your ad more visible.</string>
    <string name="sample_college">College Name</string>

    <string name="description_zoom_touch_close">Expanded image (touch to close)</string>
    <string name="verify_text">A verification email has been sent to your registered email ID.</string>
    <string name="verify_btn">Click here after verification.</string>
    <string name="verify_check">Checking if account verified…</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="submit">Submit</string>
    <string name="delete_account">Delete Account</string>
    <string name="skip">Skip</string>
    <string name="finish">Finish</string>
    <string name="lost_found"><![CDATA[Lost & Found]]></string>
    <string name="buy_sell">Buy / Sell</string>
    <string name="timetables_datesheets_etc">Timetable, Datesheet</string>
    <string name="teach">Teach</string>
    <string name="events">Events, RPS</string>
    <string name="time">Time:</string>
    <string name="date">Date:</string>
    <string name="hostel">Hostel</string>
    <string name="add">add</string>
    <string name="cancel">Cancel</string>
    <string name="error_image">Error Image</string>
    <string name="by">by</string>


    <string name="hintDescriptionEvent">Add details about the event here:\n   Venue, Fees, etc…</string>
    <string name="hintDescriptionLostFound">When, Where, What, How? \nWrite details here…</string>
    <string name="hintDescriptionTeach">A short note about the class…</string>
    <string name="dd_mm_yy">dd/MM/yy</string>
    <string name="sample_time">24:00</string>
    <string name="ad_type">Ad Type</string>
    <string name="txt_sell">SELL</string>
    <string name="txt_lost">LOST</string>
    <string name="txt_event">EVENT</string>
    <string name="txt_teach">TEACH</string>
    <string name="blackbox_india">BlackBox India</string>
    <string name="price">Price</string>
    <string name="download_all">Download All</string>
    <string name="not_logged_in">(Not logged in)</string>
    <string name="broadcast">Broadcast!</string>
    <string name="posted_on">Posted on:</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="create_event">Create Event</string>

</resources>
