<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/nav_firstGroup">
        <item
            android:id="@+id/nav_allAds"
            android:icon="@drawable/ic_all"
            android:title="@string/all_ads" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:visible="false"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/nav_myAds"
            android:icon="@drawable/ic_menu_slideshow"
            android:visible="false"
            android:title="@string/my_ads" />

    </group>
    <group android:id="@+id/nav_secondGroup">
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:visible="false"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_newAccount"
            android:icon="@drawable/ic_new"
            android:title="@string/new_account" />
    </group>
    <!--

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

    -->

</menu>
