<?xml version="1.0" encoding="utf-8"?>
<com.blackboxindia.TakeIT.CustomViews.LockableScrollView
    android:id="@+id/lockableScrollView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <FrameLayout
        android:id="@+id/frame_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/viewAdContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:id="@+id/Ad_tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_margin="6dp"
                android:maxLines="2"
                android:maxLength="@integer/Max_Title_Length"
                android:text="@string/sampleTitle"
                android:textAlignment="center"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold"
                />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/Ad_imgRecycler"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/viewAdImageSize"
                android:layout_below="@+id/Ad_tvTitle"
                />

            <TextView
                android:id="@+id/Ad_tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/date"
                android:textSize="19sp"
                android:textStyle="bold"
                android:layout_below="@id/Ad_imgRecycler"
                />
            <TextView
                android:id="@+id/Ad_etDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/dd_mm_yy"
                android:textSize="16sp"
                android:layout_alignBaseline="@id/Ad_tvDate"
                android:layout_toEndOf="@id/Ad_tvDate"/>
            <TextView
                android:id="@+id/Ad_tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:text="@string/time"
                android:textSize="19sp"
                android:textStyle="bold"
                android:layout_alignTop="@id/Ad_tvDate"
                android:layout_toEndOf="@id/Ad_etDate"
                />
            <TextView
                android:id="@+id/Ad_etTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin = "12dp"
                android:text="@string/sample_time"
                android:textSize="16sp"
                android:layout_alignBaseline="@id/Ad_tvTime"
                android:layout_toEndOf="@id/Ad_tvTime"
                 />

            <TextView
                android:id="@+id/Ad_tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Ad_tvTime"
                android:layout_margin="12dp"
                android:text="@string/labelDescription"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/Ad_tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Ad_tv1"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="16dp"
                android:text="@string/loremIpsum"
                android:textSize="15sp"
                android:maxLength="@integer/Max_Description_Size"/>

        </RelativeLayout>

        <com.jsibbold.zoomage.ZoomageView
            android:id="@+id/expanded_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:zoomage_restrictBounds="false"
            app:zoomage_zoomable="true"
            app:zoomage_autoCenter="true"
            app:zoomage_minScale="0.5"
            app:zoomage_maxScale="8"
            android:visibility="gone"
            />

    </FrameLayout>

</com.blackboxindia.TakeIT.CustomViews.LockableScrollView>