<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="LabelFor"
        >

        <EditText
            android:id="@+id/newAd_etTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:inputType="textAutoCorrect"
            android:maxLength="@integer/Max_Title_Length"
            android:text="@string/setTitle"
            android:textAlignment="center"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <FrameLayout
            android:id="@+id/newAd_recyclerFrame"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newAd_etTitle">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/newAd_imgRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="200dp"
                android:maxHeight="@dimen/viewAdImageSize"
                android:background="@android:color/darker_gray"
                 />

            <TextView
                android:id="@+id/newAd_recyclerHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_margin="50dp"
                android:text="@string/add_image_hint"
                />

        </FrameLayout>

        <Button
            android:id="@+id/newAd_btnAddImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/newAd_recyclerFrame"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="3dp"
            android:text="@string/add_photo"
            />

        <TextView
            android:id="@+id/newAd_tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/labelDescription"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newAd_btnAddImg"
            />

        <EditText
            android:id="@+id/newAd_etDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:hint="@string/hintDescriptionLostFound"
            android:inputType="textMultiLine"
            android:textSize="15sp"
            android:maxLength="@integer/Max_Description_Size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newAd_tvDescription"
            />

        <Button
            android:id="@+id/newAd_btnCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/create_ad"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newAd_etDescription" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>