<?xml version="1.0" encoding="utf-8"?>
<com.blackboxindia.PostIT.CustomViews.LockableScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="LabelFor"
        >

        <EditText
            android:id="@+id/AdTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:inputType="textAutoCorrect"
            android:maxLength="@integer/Max_Title_Length"
            android:text="@string/setTitle"
            android:textAlignment="center"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"
            android:selectAllOnFocus="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <FrameLayout
            android:id="@+id/newAd_recyclerFrame"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/AdTitle">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/ImageRecycler"
                android:layout_width="match_parent"
                android:layout_height="@dimen/viewAdImageSize"
                android:background="@android:color/darker_gray"
                 />

            <TextView
                android:id="@+id/ImgRecyclerHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_margin="50dp"
                android:text="@string/add_image_hint"
                />

        </FrameLayout>

        <Button
            android:id="@+id/newAd_btnAddImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/newAd_recyclerFrame"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="3dp"
            android:text="@string/add_photo"
            />

        <TextView
            android:id="@+id/newAd_tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/date"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/newAd_etDate"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <EditText
            android:id="@+id/newAd_etDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="18dp"
            android:minEms="5"
            android:inputType="date"
            android:focusable="false"
            android:longClickable="false"
            app:layout_constraintLeft_toRightOf="@+id/newAd_tvDate"
            app:layout_constraintTop_toBottomOf="@+id/newAd_recyclerFrame" />

        <TextView
            android:id="@+id/newAd_tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/time"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/newAd_etTime"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <EditText
            android:id="@+id/newAd_etTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:minEms="5"
            android:inputType="time"
            android:focusable="false"
            android:longClickable="false"
            app:layout_constraintLeft_toLeftOf="@+id/newAd_etDate"
            app:layout_constraintTop_toBottomOf="@+id/newAd_etDate" />

        <View
            android:id="@+id/newAd_line"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/black_trans80"
            android:layout_marginTop="10dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newAd_etTime"
            />

        <TextView
            android:id="@+id/newAd_tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/labelDescription"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newAd_line"
            />

        <EditText
            android:id="@+id/newAd_etDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="6dp"
            android:hint="@string/hintDescriptionEvent"
            android:inputType="textMultiLine"
            android:textSize="15sp"
            android:maxLength="@integer/Max_Description_Size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newAd_tvDescription"
            />

        <Button
            android:id="@+id/newAd_btnCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/create_ad"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newAd_etDescription" />

    </android.support.constraint.ConstraintLayout>
</com.blackboxindia.PostIT.CustomViews.LockableScrollView>