<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/verify_tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:text="@string/verify_text"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/verify_btn_Check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/verify_tv1"
        android:layout_marginTop="10dp"
        android:text="@string/verify_btn"
        />

    <TextView
        android:id="@+id/verify_tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/verify_btn_Check"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/verify_check"
        android:textSize="16sp"
        android:visibility="invisible"
        />

    <ProgressBar
        android:id="@+id/verify_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/verify_tv3"
        android:layout_marginTop="10dp"
        android:visibility="invisible"/>

</androidx.constraintlayout.widget.ConstraintLayout>