<?xml version="1.0" encoding="utf-8"?>
<com.blackboxindia.PostIT.CustomViews.LockableScrollView
    android:id="@+id/lockableScrollView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

    <FrameLayout
        android:id="@+id/frame_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/viewAdContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:id="@+id/Ad_tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_margin="6dp"
                android:maxLines="2"
                android:maxLength="@integer/Max_Title_Length"
                android:text="@string/sampleTitle"
                android:textAlignment="center"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold"
                />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/Ad_imgRecycler"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/viewAdImageSize"
                android:layout_below="@+id/Ad_tvTitle"
                />

            <TextView
                android:id="@+id/Ad_tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Ad_imgRecycler"
                android:layout_margin="12dp"
                android:text="@string/labelDescription"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/Ad_tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/Ad_tvDescription"
                android:layout_below="@+id/Ad_imgRecycler"
                android:gravity="end"
                android:text="@string/setPrice"
                android:textSize="26sp" />
            <TextView
                android:id="@+id/Ad_tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Ad_tv1"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="16dp"
                android:text="@string/loremIpsum"
                android:textIsSelectable="true"
                android:textSize="15sp"
                android:maxLength="@integer/Max_Description_Size"/>

        </RelativeLayout>

        <com.jsibbold.zoomage.ZoomageView
            android:id="@+id/expanded_image"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:zoomage_restrictBounds="false"
            app:zoomage_zoomable="true"
            app:zoomage_autoCenter="true"
            app:zoomage_minScale="1"
            app:zoomage_maxScale="8"
            app:zoomage_translatable="false"
            android:visibility="gone"
            />

    </FrameLayout>

</com.blackboxindia.PostIT.CustomViews.LockableScrollView>