<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="10dp"
        android:textSize="22sp"
        />
    
    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:background="@color/colorAccent"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginTop="4dp"
        />
    
    <EditText
        android:id="@+id/dialog_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLength="20"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        android:layout_marginTop="8dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="10dp"
        />

    <Button
        android:id="@+id/dialog_Cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/dialog_text"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="40dp"
        android:text="@string/cancel"
        android:layout_marginTop="8dp"
        />

    <Button
        android:id="@+id/dialog_Submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/dialog_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/dialog_Cancel"
        android:text="@string/add"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        />

</android.support.constraint.ConstraintLayout>